kube/aux-kafka.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /tmp/kompose --file /home/lut_99/UvA/EPI/brane/docker-compose-brn.yml convert
    kompose.service.nodeport.port: "9092"
    kompose.service.type: nodeport
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: aux-kafka
  name: aux-kafka
spec:
  ports:
    - name: "9092"
      nodePort: 9092
      port: 9092
      targetPort: 9092
    - name: "29092"
      nodePort: 29092
      port: 29092
      targetPort: 29092
  selector:
    io.kompose.service: aux-kafka
  type: NodePort
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /tmp/kompose --file /home/lut_99/UvA/EPI/brane/docker-compose-brn.yml convert
    kompose.service.nodeport.port: "9092"
    kompose.service.type: nodeport
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: aux-kafka
  name: aux-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: aux-kafka
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /tmp/kompose --file /home/lut_99/UvA/EPI/brane/docker-compose-brn.yml convert
        kompose.service.nodeport.port: "9092"
        kompose.service.type: nodeport
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/brane: "true"
        io.kompose.service: aux-kafka
    spec:
      containers:
        - env:
            - name: CONFLUENT_SUPPORT_METRICS_ENABLE
              value: "0"
            - name: KAFKA_ADVERTISED_LISTENERS
              value: DOCKER://aux-kafka.brane-control.svc.cluster.local:29092,HOST://localhost:9092
            - name: KAFKA_BROKER_ID
              value: "0"
            - name: KAFKA_INTER_BROKER_LISTENER_NAME
              value: DOCKER
            - name: KAFKA_LISTENERS
              value: DOCKER://0.0.0.0:29092,HOST://0.0.0.0:9092
            - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
              value: DOCKER:PLAINTEXT,HOST:PLAINTEXT
            - name: KAFKA_NUM_PARTITIONS
              value: "1"
            - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
              value: "1"
            - name: KAFKA_ZOOKEEPER_CONNECT
              value: aux-zookeeper.brane-control.svc.cluster.local:2181
          image: confluentinc/cp-kafka:6.2.0
          name: aux-kafka
          ports:
            - containerPort: 9092
          resources: {}
      restartPolicy: Always
status: {}
