kube/aux-scylla.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /tmp/kompose --file /home/lut_99/UvA/EPI/brane/docker-compose-brn.yml convert
    kompose.service.nodeport.port: "9042"
    kompose.service.type: nodeport
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: aux-scylla
  name: aux-scylla
spec:
  ports:
    - name: "9042"
      nodePort: 9042
      port: 9042
      targetPort: 9042
  selector:
    io.kompose.service: aux-scylla
  type: NodePort
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /tmp/kompose --file /home/lut_99/UvA/EPI/brane/docker-compose-brn.yml convert
    kompose.service.nodeport.port: "9042"
    kompose.service.type: nodeport
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: aux-scylla
  name: aux-scylla
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: aux-scylla
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /tmp/kompose --file /home/lut_99/UvA/EPI/brane/docker-compose-brn.yml convert
        kompose.service.nodeport.port: "9042"
        kompose.service.type: nodeport
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/brane: "true"
        io.kompose.service: aux-scylla
    spec:
      containers:
        - args:
            - --smp
            - "1"
          image: scylladb/scylla:4.4.3
          name: aux-scylla
          ports:
            - containerPort: 9042
          resources: {}
      restartPolicy: Always
status: {}
