kube/aux-zookeeper.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: aux-zookeeper
  name: aux-zookeeper
spec:
  ports:
    - name: "2181"
      port: 2181
      targetPort: 2181
  selector:
    io.kompose.service: aux-zookeeper
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /tmp/kompose --file /home/lut_99/UvA/EPI/brane/docker-compose-brn.yml convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: aux-zookeeper
  name: aux-zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: aux-zookeeper
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /tmp/kompose --file /home/lut_99/UvA/EPI/brane/docker-compose-brn.yml convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/brane: "true"
        io.kompose.service: aux-zookeeper
    spec:
      containers:
        - env:
            - name: ZOOKEEPER_CLIENT_PORT
              value: "2181"
          image: confluentinc/cp-zookeeper:5.5.1
          name: aux-zookeeper
          resources: {}
      restartPolicy: Always
status: {}
