kube/brane-api.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /tmp/kompose --file /home/lut_99/UvA/EPI/brane/docker-compose-brn.yml convert
    kompose.service.nodeport.port: "50051"
    kompose.service.type: nodeport
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: brane-api
  name: brane-api
spec:
  ports:
    - name: "50051"
      nodePort: 50051
      port: 50051
      targetPort: 50051
  selector:
    io.kompose.service: brane-api
  type: NodePort
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /tmp/kompose --file /home/lut_99/UvA/EPI/brane/docker-compose-brn.yml convert
    kompose.service.nodeport.port: "50051"
    kompose.service.type: nodeport
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: brane-api
  name: brane-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: brane-api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /tmp/kompose --file /home/lut_99/UvA/EPI/brane/docker-compose-brn.yml convert
        kompose.service.nodeport.port: "50051"
        kompose.service.type: nodeport
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/brane: "true"
        io.kompose.service: brane-api
    spec:
      containers:
        - env:
            - name: ADDRESS
              value: 0.0.0.0:50051
            - name: REGISTRY
              value: aux-registry.brane-control.svc.cluster.local:50050
            - name: SCYLLA
              value: aux-scylla.brane-control.svc.cluster.local:9042
          image: 127.0.0.1:50050/brane-api:latest
          name: brane-api
          ports:
            - containerPort: 50051
          resources: {}
      restartPolicy: Always
status: {}
