kube/brane-log.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /tmp/kompose --file /home/lut_99/UvA/EPI/brane/docker-compose-brn.yml convert
    kompose.service.nodeport.port: "50055"
    kompose.service.type: nodeport
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: brane-log
  name: brane-log
spec:
  ports:
    - name: "50055"
      nodePort: 50055
      port: 50055
      targetPort: 50055
  selector:
    io.kompose.service: brane-log
  type: NodePort
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /tmp/kompose --file /home/lut_99/UvA/EPI/brane/docker-compose-brn.yml convert
    kompose.service.nodeport.port: "50055"
    kompose.service.type: nodeport
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: brane-log
  name: brane-log
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: brane-log
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /tmp/kompose --file /home/lut_99/UvA/EPI/brane/docker-compose-brn.yml convert
        kompose.service.nodeport.port: "50055"
        kompose.service.type: nodeport
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/brane: "true"
        io.kompose.service: brane-log
    spec:
      containers:
        - env:
            - name: BROKERS
              value: aux-kafka.brane-control.svc.cluster.local:29092
            - name: EVENT_TOPIC
              value: job-evt
            - name: SCYLLA
              value: aux-scylla.brane-control.svc.cluster.local:9042
          image: 127.0.0.1:50050/brane-log:latest
          name: brane-log
          ports:
            - containerPort: 50055
          resources: {}
      restartPolicy: Always
status: {}
