kube/brane-plr.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: brane-plr
  name: brane-plr
spec:
  ports:
    # Bogus port used to have a service with resolveable DNS
    - name: "12345"
      port: 12345
  selector:
    io.kompose.service: brane-plr
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /tmp/kompose --file /home/lut_99/UvA/EPI/brane/docker-compose-brn.yml convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: brane-plr
  name: brane-plr
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: brane-plr
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /tmp/kompose --file /home/lut_99/UvA/EPI/brane/docker-compose-brn.yml convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/brane: "true"
        io.kompose.service: brane-plr
    spec:
      containers:
        - env:
            - name: BROKERS
              value: aux-kafka.brane-control.svc.cluster.local:29092
            - name: COMMAND_FROM_TOPIC
              value: drv-cmd
            - name: COMMAND_TO_TOPIC
              value: plr-cmd
          image: 127.0.0.1:50050/brane-plr:latest
          name: brane-plr
          resources: {}
      restartPolicy: Always
status: {}
