kube/brane-xenon.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /tmp/kompose --file /home/lut_99/UvA/EPI/brane/docker-compose-brn.yml convert
    kompose.service.nodeport.port: "50054"
    kompose.service.type: nodeport
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: brane-xenon
  name: brane-xenon
spec:
  ports:
    - name: "50054"
      nodePort: 50054
      port: 50054
      targetPort: 50054
  selector:
    io.kompose.service: brane-xenon
  type: NodePort
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /tmp/kompose --file /home/lut_99/UvA/EPI/brane/docker-compose-brn.yml convert
    kompose.service.nodeport.port: "50054"
    kompose.service.type: nodeport
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: brane-xenon
  name: brane-xenon
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: brane-xenon
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /tmp/kompose --file /home/lut_99/UvA/EPI/brane/docker-compose-brn.yml convert
        kompose.service.nodeport.port: "50054"
        kompose.service.type: nodeport
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/brane: "true"
        io.kompose.service: brane-xenon
    spec:
      containers:
        - args:
            - -v
          image: 127.0.0.1:50050/brane-xenon:latest
          name: brane-xenon
          ports:
            - containerPort: 50054
          resources: {}
      restartPolicy: Always
status: {}
